kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: backstage
  labels:
    name: backstage
    environment: production
    team: devops
    cost-center: "ba-devops"
